[project]
name = "router"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [{ name = "MuhammadRaffey", email = "muhammadraffey26@gmail.com" }]
requires-python = ">=3.11"
dependencies = ["crewai>=0.100.1"]

[project.scripts]
router = "router.main:kickoff"
plot = "router.main:plot"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
